/*
 * To change this license header, choose License Headers in Project Properties.
 * To change this template file, choose Tools | Templates
 * and open the template in the editor.
 */
package interficies;

/**
 *
 * @author dios
 */
public class ExempleDolentDeClasseAmbInterficie implements ExempleInterficie{
    
    @Override
    public void metodePrimer(int primerValor){
        
    }
    
    @Override
    public void metodeSegon(int AlgunValor){
        
    }

    
    
}
