/*
 * To change this license header, choose License Headers in Project Properties.
 * To change this template file, choose Tools | Templates
 * and open the template in the editor.
 */
package interficies;

/**
 *
 * @author dios
 */
public interface UnaAltraInterficie {
            
    
    void unAltreMetode();
    
    void unAltreAltreMetide();
    
    static void metodeStatic(){
        
        System.out.println("Pos aixo fa algo");
    }
    
   
}
